feat: implement search and sort on ListDomains endpoint
